# httptypes

./: .gitignore  Cargo.toml
src/: lib.rs  method.rs  status.rs  util.rs  version.rs
src/header/: conditional.rs  context.rs  control.rs  item.rs  metadata.rs  mod.rs  negotiation.rs  util.rs
