[package]
name = "httptypes"
version = "0.1.0"
authors = ["Pyfisch <pyfisch@gmail.com>"]

[features]
default = ["context", "metadata", "negotiation"]

context = []
metadata = []
negotiation = ["charsets"]

[dependencies]
charsets = { version="0.2.0", optional=true }
language-tags = "0.2.2"
matches = "0.1.2"
media-types = "0.2.0"
url = "1.2.0"
